Fixing bugs where class selectors not showing up when open html file

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -15,5 +15,5 @@ p {
 .fourth {
     background-color: rgb(136, 214, 136);
     font-size: 24px;
-    font-weight: bold;
+    font-weight: bolds;
 }
